Fix warning error